# tu_dien_seeder

./: '  Cargo.toml
config/: .gitignore
sql/: install.sql  nuke.sql
src/: dictionary.rs  file_manager.rs  fpt_client.rs  hydrator.rs  lexico_iterator.rs  main.rs  sql.rs  stardict_grammar.pest  unhydrated_iterator.rs  viet-eng.txt  word_map.rs
src/iterators/: entry_iterator.rs  lexico_iterator.rs
