[package]
name = "stardict_parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
pest = "2.5.5"
pest_derive = "2.5.5"
config = "0.13.1"
mysql = "*"

[dev-dependencies]
pretty_assertions = "1.3.0"
