[package]
name = "stardict_parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
pest = "2.5.5"
pest_derive = "2.5.5"
config = "0.13.1"
mysql = "*"
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
axum = "0.6.18"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.163"
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
